# VK-user-info-fetcher-neo4j

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  template.env  vk_info.json  vk_info.py
src/: config.py  main.py  neo4j_db.py  processor.py  queries.py  utils.py  vk_api.py
