[tool.poetry]
name = "vk-user-info-fetcher"
version = "0.1.0"
description = ""
authors = ["Ruslan Lebj <dressgecko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
neo4j = "^5.26.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
